Experimenting with MainContainer layout and Home route to make sure that dynamically rendered components would be aligned and flexed properly;

--- a/src/components/MainContainer.css
+++ b/src/components/MainContainer.css
@@ -1,5 +1,6 @@
 .main-container {
     margin-top: 5rem;
+    margin-right: 5rem;
 }
 
 .left-align {
